<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#CF9586"
            android:gravity="center"
            android:text="@string/operaciones"
            android:textColor="#000"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/dato1"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/numero1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/dato1"
                    android:inputType="number"
                    android:ems="10"
                    android:autofillHints="">

                </EditText>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/dato2"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/numero2"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/dato2"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:importantForAutofill="no">

                </EditText>

                <Button
                    android:id="@+id/btnsumar"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bordes_redondos"
                    android:text="@string/sumar" />

                <Button
                    android:id="@+id/btnrestar"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bordes_redondos"
                    android:text="@string/restar" />

                <Button
                    android:id="@+id/btnmulti"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bordes_redondos"
                    android:text="@string/multiplicar" />

                <Button
                    android:id="@+id/btndiv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bordes_redondos"
                    android:text="@string/dividir" />

                <Button
                    android:id="@+id/btnmcm"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bordes_redondos"
                    android:text="@string/mcm" />

                <Button
                    android:id="@+id/btnmcd"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bordes_redondos"
                    android:text="@string/mcd" />

                <Button
                    android:id="@+id/btnmayor"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bordes_redondos"
                    android:text="@string/mayor" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </LinearLayout>


</LinearLayout>