<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Distance">

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000"
            android:text="@string/x1"/>

        <EditText
            android:id="@+id/etx1"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789-."
            android:textColor="#000"
            android:ems="5"
            tools:ignore="InvalidId"
            android:inputType="numberSigned|numberDecimal"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="25sp"
            android:text="@string/y1"/>

        <EditText
            android:id="@+id/ety1"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:digits="0123456789-."
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberSigned|numberDecimal"
            tools:ignore="InvalidId"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="#000"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="25sp"
            android:text="@string/x2"/>

        <EditText
            android:id="@+id/etx2"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:inputType="numberSigned|numberDecimal"
            android:digits="0123456789-."
            android:ems="5"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000"
            android:text="@string/y2"/>

        <EditText
            android:id="@+id/ety2"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:ems="5"
            android:inputType="numberSigned|numberDecimal"
            android:digits="0123456789-."
            tools:ignore="InvalidId"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnpmedio"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/puntomedio"
            android:background="@drawable/bordes_redondos"/>

        <Button
            android:id="@+id/btnpendiente"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/pendiente"
            android:background="@drawable/bordes_redondos"/>

        <Button
            android:id="@+id/btncuadra"
            android:layout_width="150dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/cuadrante"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>